src/mlx.h

/*
**  mlx_init() is needed before everything else.
**  mlx_init() returns 'void *0' in case of failure.
**  mlx_release() returns 0 on success.
*/
void	*mlx_init();
int	mlx_release(void *mlx_ptr);
/*
** Window actions
*/
void	*mlx_new_window(void *mlx_ptr, unsigned int width,
			unsigned int height, const char *title);
int	mlx_clear_window(void *mlx_ptr, void *win_ptr);
int	mlx_pixel_put(void *mlx_ptr, void *win_ptr,
		      unsigned int x, unsigned int y, unsigned int color);
int	mlx_destroy_window(void *mlx_ptr, void *win_ptr);
/*
**  mlx_new_window() returns 'void *0' if failed.
**  Other functions return 0 on success.
**  Origin for x & y is top left corner of the window, y down is positive.
**  x and y must fit into the size of the window, values are not controled
**  Color byte order is B8G8R8A8, which could be 0xAARRGGBB or 0xBBGGRRAA
**   depending on local endianess.
*/


/*
** Images
*/
void	*mlx_new_image(void *mlx_ptr, unsigned int width, unsigned int height);
unsigned char	*mlx_get_data_addr(void *img_ptr, unsigned int *bits_per_pixel,
				   unsigned int *size_line,
				   unsigned int *format);
int	mlx_put_image_to_window(void *mlx_ptr, void *win_ptr, void *img_ptr,
				int x, int y);
int	mlx_destroy_image(void *mlx_ptr, void *img_ptr);
/*
** mlx_new_image() returns 'void *0' in case of failure.
** mlx_get_data_addr() returns a pointer to a height * size_line bytes buffer
**   that holds the pixel values.
** Other functions return 0 on success.
** 'format' can be: 0 = B8G8R8A8; 1 = A8R8G8B8; (byte order).
** Carefully consider the format, it can be reversed in some cases, like a remote graphic server
*/


/*
** deprecated function - format of image allows conversion on student's side
** unsigned int	mlx_get_color_value(void *mlx_ptr, int color);
**
*/


/*
** main loop & dealing with events
*/
typedef int (*mlx_mouse_callback)(unsigned int, unsigned int, unsigned int, void*);
typedef int (*mlx_key_callback)(unsigned int, void *);
typedef int (*mlx_expose_callback)(void *);
typedef int (*mlx_loop_callback)(void *);
typedef int (*mlx_hook_callback)(void *);
int	mlx_loop(void *mlx_ptr);
int	mlx_loop_exit(void *mlx_ptr);
int	mlx_mouse_hook(void *win_ptr, mlx_mouse_callback funct_ptr, void *param);
int	mlx_key_hook(void *win_ptr, mlx_key_callback funct_ptr, void *param);
int	mlx_expose_hook(void *win_ptr, mlx_expose_callback funct_ptr, void *param);
int	mlx_loop_hook(void *mlx_ptr, mlx_loop_callback funct_ptr, void *param);
/*
**  Functions return 0 on success.
**  Key event is triggered on KeyRelease, not KeyPressed.
**  Mouse event is triggered on clic.
**
**  hook functions are called as follow:
**    expose_hook(void *param);
**    key_hook(unsigned int keycode, void *param);
**    mouse_hook(unsigned int button, unsigned int x, unsigned int y,
**               void *param);
**    loop_hook(void *param);
*/

/*
**  Generic hook system for all events, and minilibX functions that
**    can be hooked. Some macro and defines from X11/X.h are needed here.
**  Warning: you may need to cast your function pointer for key and mouse events
**   as there will be extra parameters.
*/
int	mlx_hook(void *win_ptr, unsigned int x_event, unsigned int x_mask,
                 mlx_hook_callback funct_ptr, void *param);