python/src/mlx/mlx.py

"""Python wrapper for the MLX C library.

See the mlx manuals and ``mlx.h`` from the C library for the detailed
semantics of each function. Functions that need to hand back extra
values through pointer arguments in C (e.g. width/height, x/y) are
converted here into Python methods that return a tuple instead.
"""

import ctypes
import os
import sys
from typing import Callable, Dict, Optional, Tuple

#: Callback signature for :meth:`Mlx.mlx_mouse_hook`: button, x, y, param.
MouseCallback = Callable[[int, int, int, object], object]
#: Callback signature for :meth:`Mlx.mlx_key_hook`: keycode, param.
KeyCallback = Callable[[int, object], object]
#: Callback signature for :meth:`Mlx.mlx_expose_hook`/``mlx_loop_hook``: param.
NoArgCallback = Callable[[object], object]
#: Callback signature accepted by the generic :meth:`Mlx.mlx_hook`; its
#: actual arity depends on ``x_event`` and can't be expressed statically.
HookCallback = Callable[..., object]


class Mlx:
    """Thin ctypes wrapper exposing every function documented in mlx.h."""

    def __init__(self) -> None:
        """Load the MLX shared library shipped alongside this module."""
        module_dir = os.path.dirname(os.path.abspath(__file__))
        # the AppKit backend's Makefile builds libmlx.dylib (macOS's
        # native shared-library convention), every other backend builds
        # libmlx.so
        libname = "libmlx.dylib" if sys.platform == "darwin" else "libmlx.so"
        self.so_file = os.path.join(module_dir, libname)
        self.mlx_func: ctypes.CDLL = ctypes.CDLL(self.so_file)
        self._python_ref_std: Dict[str, object] = {}
        self._python_ref_gen: Dict[str, object] = {}
        self._img_height: Dict[str, int] = {}

    # Initialisation

    def mlx_init(self) -> Optional[int]:
        """Initialize the library. Must be called before anything else."""
        self.mlx_func.mlx_init.restype = ctypes.c_void_p
        result: Optional[int] = self.mlx_func.mlx_init()
        return result

    def mlx_release(self, mlx_ptr: Optional[int]) -> int:
        """Release every resource held by ``mlx_ptr``."""
        self.mlx_func.mlx_release.argtypes = [ctypes.c_void_p]
        self.mlx_func.mlx_release.restype = ctypes.c_int
        result: int = self.mlx_func.mlx_release(mlx_ptr)
        return result

    # Windows

    def mlx_new_window(
        self, mlx_ptr: Optional[int], width: int, height: int, title: str
    ) -> Optional[int]:
        """Create a new window of the given size and title."""
        self.mlx_func.mlx_new_window.argtypes = [
            ctypes.c_void_p, ctypes.c_uint, ctypes.c_uint, ctypes.c_char_p,
        ]
        self.mlx_func.mlx_new_window.restype = ctypes.c_void_p
        result: Optional[int] = self.mlx_func.mlx_new_window(
            mlx_ptr, width, height, title.encode("utf-8")
        )
        return result

    def mlx_clear_window(
        self, mlx_ptr: Optional[int], win_ptr: Optional[int]
    ) -> int:
        """Clear the whole window to black."""
        self.mlx_func.mlx_clear_window.argtypes = [
            ctypes.c_void_p, ctypes.c_void_p,
        ]
        self.mlx_func.mlx_clear_window.restype = ctypes.c_int
        result: int = self.mlx_func.mlx_clear_window(mlx_ptr, win_ptr)
        return result

    def mlx_pixel_put(
        self,
        mlx_ptr: Optional[int],
        win_ptr: Optional[int],
        x: int,
        y: int,
        color: int,
    ) -> int:
        """Set a single pixel of the window to ``color``."""
        self.mlx_func.mlx_pixel_put.argtypes = [
            ctypes.c_void_p, ctypes.c_void_p,
            ctypes.c_uint, ctypes.c_uint, ctypes.c_uint,
        ]
        self.mlx_func.mlx_pixel_put.restype = ctypes.c_int
        result: int = self.mlx_func.mlx_pixel_put(
            mlx_ptr, win_ptr, x, y, color
        )
        return result

    def mlx_destroy_window(
        self, mlx_ptr: Optional[int], win_ptr: Optional[int]
    ) -> int:
        """Destroy a window created by :meth:`mlx_new_window`."""
        self.mlx_func.mlx_destroy_window.argtypes = [
            ctypes.c_void_p, ctypes.c_void_p,
        ]
        self.mlx_func.mlx_destroy_window.restype = ctypes.c_int
        result: int = self.mlx_func.mlx_destroy_window(mlx_ptr, win_ptr)
        return result

    # Images

    def mlx_new_image(
        self, mlx_ptr: Optional[int], width: int, height: int
    ) -> Optional[int]:
        """Create a new off-screen image of the given size."""
        self.mlx_func.mlx_new_image.argtypes = [
            ctypes.c_void_p, ctypes.c_uint, ctypes.c_uint,
        ]
        self.mlx_func.mlx_new_image.restype = ctypes.c_void_p
        ret: Optional[int] = self.mlx_func.mlx_new_image(
            mlx_ptr, width, height
        )
        if ret is not None:
            self._img_height[str(ret)] = height
        return ret

    def mlx_get_data_addr(
        self, img_ptr: Optional[int]
    ) -> Tuple[memoryview, int, int, int]:
        """Return a writable ``(pixels, bits_per_pixel, size_line, format)``.

        API break: returns a tuple instead of writing through pointers.
        """
        bits_per_pixel = ctypes.c_uint()
        size_line = ctypes.c_uint()
        theformat = ctypes.c_uint()
        self.mlx_func.mlx_get_data_addr.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_uint),
            ctypes.POINTER(ctypes.c_uint),
            ctypes.POINTER(ctypes.c_uint),
        ]
        self.mlx_func.mlx_get_data_addr.restype = ctypes.POINTER(ctypes.c_char)
        data = self.mlx_func.mlx_get_data_addr(
            img_ptr,
            ctypes.byref(bits_per_pixel),
            ctypes.byref(size_line),
            ctypes.byref(theformat),
        )
        data_array = ctypes.c_char * (
            self._img_height[str(img_ptr)] * size_line.value
        )
        data_view = data_array.from_address(ctypes.addressof(data.contents))
        return (
            memoryview(data_view).cast("B"),
            bits_per_pixel.value,
            size_line.value,
            theformat.value,
        )

    def mlx_put_image_to_window(
        self,
        mlx_ptr: Optional[int],
        win_ptr: Optional[int],
        img_ptr: Optional[int],
        x: int,
        y: int,
    ) -> int:
        """Blit an image onto a window at ``(x, y)``."""
        self.mlx_func.mlx_put_image_to_window.argtypes = [
            ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p,
            ctypes.c_int, ctypes.c_int,
        ]
        self.mlx_func.mlx_put_image_to_window.restype = ctypes.c_int
        result: int = self.mlx_func.mlx_put_image_to_window(
            mlx_ptr, win_ptr, img_ptr, x, y
        )
        return result

    def mlx_destroy_image(
        self, mlx_ptr: Optional[int], img_ptr: Optional[int]
    ) -> int:
        """Destroy an image created by :meth:`mlx_new_image` (or a loader)."""
        self._img_height.pop(str(img_ptr))
        self.mlx_func.mlx_destroy_image.argtypes = [
            ctypes.c_void_p, ctypes.c_void_p,
        ]
        self.mlx_func.mlx_destroy_image.restype = ctypes.c_int
        result: int = self.mlx_func.mlx_destroy_image(mlx_ptr, img_ptr)
        return result

    # Events & main loop
    # Note: Python can't catch Ctrl-C from the keyboard during mlx_loop()
    # execution. Use Ctrl-\ to kill the program instead.

    def mlx_loop(self, mlx_ptr: Optional[int]) -> int:
        """Run the event loop until :meth:`mlx_loop_exit` is called."""
        self.mlx_func.mlx_loop.argtypes = [ctypes.c_void_p]
        self.mlx_func.mlx_loop.restype = ctypes.c_int
        result: int = self.mlx_func.mlx_loop(mlx_ptr)
        return result

    def mlx_loop_exit(self, mlx_ptr: Optional[int]) -> int:
        """Ask a running :meth:`mlx_loop` to return."""
        self.mlx_func.mlx_loop_exit.argtypes = [ctypes.c_void_p]
        self.mlx_func.mlx_loop_exit.restype = ctypes.c_int
        result: int = self.mlx_func.mlx_loop_exit(mlx_ptr)
        return result

    def mlx_mouse_hook(
        self,
        win_ptr: Optional[int],
        callback: Optional[MouseCallback],
        param: object,
    ) -> int:
        """Register (or clear, with ``callback=None``) a mouse-click hook."""
        self.mlx_func.mlx_mouse_hook.restype = ctypes.c_int
        if not callback:
            self._python_ref_std[str(win_ptr) + "_mouse_f"] = None
            self._python_ref_std[str(win_ptr) + "_mouse_p"] = None
            self.mlx_func.mlx_mouse_hook.argtypes = [
                ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p,
            ]
            result: int = self.mlx_func.mlx_mouse_hook(win_ptr, None, None)
            return result
        callback_type = ctypes.CFUNCTYPE(
            None, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.py_object
        )
        self.mlx_func.mlx_mouse_hook.argtypes = [
            ctypes.c_void_p, callback_type, ctypes.py_object,
        ]
        callback_ref = callback_type(callback)
        self._python_ref_std[str(win_ptr) + "_mouse_f"] = callback_ref
        self._python_ref_std[str(win_ptr) + "_mouse_p"] = param
        result = self.mlx_func.mlx_mouse_hook(win_ptr, callback_ref, param)
        return result

    def mlx_key_hook(
        self,
        win_ptr: Optional[int],
        callback: Optional[KeyCallback],
        param: object,
    ) -> int:
        """Register (or clear, with ``callback=None``) a key-release hook."""
        self.mlx_func.mlx_key_hook.restype = ctypes.c_int
        if not callback:
            self._python_ref_std[str(win_ptr) + "_key_f"] = None
            self._python_ref_std[str(win_ptr) + "_key_p"] = None
            self.mlx_func.mlx_key_hook.argtypes = [
                ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p,
            ]
            result: int = self.mlx_func.mlx_key_hook(win_ptr, None, None)
            return result
        callback_type = ctypes.CFUNCTYPE(None, ctypes.c_uint, ctypes.py_object)
        self.mlx_func.mlx_key_hook.argtypes = [
            ctypes.c_void_p, callback_type, ctypes.py_object,
        ]
        callback_ref = callback_type(callback)
        self._python_ref_std[str(win_ptr) + "_key_f"] = callback_ref
        self._python_ref_std[str(win_ptr) + "_key_p"] = param
        result = self.mlx_func.mlx_key_hook(win_ptr, callback_ref, param)
        return result

    def mlx_expose_hook(
        self,
        win_ptr: Optional[int],
        callback: Optional[NoArgCallback],
        param: object,
    ) -> int:
        """Register (or clear, with ``callback=None``) an expose hook."""
        self.mlx_func.mlx_expose_hook.restype = ctypes.c_int
        if not callback:
            self._python_ref_std[str(win_ptr) + "_expose_f"] = None
            self._python_ref_std[str(win_ptr) + "_expose_p"] = None
            self.mlx_func.mlx_expose_hook.argtypes = [
                ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p,
            ]
            result: int = self.mlx_func.mlx_expose_hook(win_ptr, None, None)
            return result
        callback_type = ctypes.CFUNCTYPE(None, ctypes.py_object)
        self.mlx_func.mlx_expose_hook.argtypes = [
            ctypes.c_void_p, callback_type, ctypes.py_object,
        ]
        callback_ref = callback_type(callback)
        self._python_ref_std[str(win_ptr) + "_expose_f"] = callback_ref
        self._python_ref_std[str(win_ptr) + "_expose_p"] = param
        result = self.mlx_func.mlx_expose_hook(win_ptr, callback_ref, param)
        return result
